--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="google-site-verification" content="WDLjPBbgzPzjbN3Ajrzv6eWsNp6xvZxYYoZxSma3TiQ" />
   <title>Hello GA</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-181817729-1"></script>
